@@ -96,3 +96,7 @@ N: Luca Cipriani
 C: Turin, Italy
 E: luca.opensource@gmail.com
 I: 278
+
+N: Maciej Lach,
+E: maciej.lach@gmail.com
+I: 294
